--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/bazel/proto:go_protos",
+        "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/proto/delimited:go_default_library",
         "@com_github_bazelbuild_buildtools//wspace:go_default_library",
