simplify the configuration to be better understood OTW

--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -27,6 +27,7 @@ go_test(
     tags = [
         "no-sandbox",
     ],
+    race = "on",
     deps = [
         ":go_default_library",
         "//lib/knetwork:go_default_library",
