bazel presubmit: Add configuration file, filter options
This change adds filter options to the presubmit driven by a
configuration file. Filter options include:

* including targets by patterns such as `//foo/bar:baz` or
  `//foo/bar/...`
* excluding targets by patterns
* excluding targets by tags

The above should give us enough control to:

* incrementally add directories to the presubmit
* exclude broken/expensive tests by either exact label or tag

To achieve this, the change contains the following:

* a protobuf definition of the config file.
* a first config file in the repository root: `presubmit.textproto`.
* logic to parse the config file and parse patterns from the config file
* logic to filter targets based on patterns and tags

Tested: Unit tests, run locally to confirm both `exclude_patterns` and
`exclude_tags` filtering functions as expected

Jira: INFRA-105

--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "affected_targets.go",
         "exec.go",
         "options.go",
+        "pattern.go",
         "query.go",
         "target.go",
         "workspace.go",
@@ -13,6 +14,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/bazel",
     visibility = ["//visibility:public"],
     deps = [
+        "//enkit/proto:go_default_library",
         "//lib/bazel/proto:go_protos",
         "//lib/goroutine:go_default_library",
         "//lib/logger:go_default_library",
@@ -28,6 +30,7 @@ go_test(
     srcs = [
         "affected_targets_test.go",
         "options_test.go",
+        "pattern_test.go",
         "query_test.go",
         "workspace_test.go",
     ],
