bazel presubmit: Don't fail when no targets provided
Bazel will exit with an error if `bazel test` is invoked with an empty
target list. This change checks both files for targets, and skips the
respective `bazel build`/`bazel test` step if the file is empty. The
log output is also improved to make it clearer when a step will be
skipped.

Jira: INFRA-113

--- a/infra/cloudbuild/presubmit_bazel.yaml
+++ b/infra/cloudbuild/presubmit_bazel.yaml
@@ -52,7 +52,7 @@ steps:
     entrypoint: bash
     args:
       - -c
-      - cat /affected-targets/build.txt | xargs bazel build
+      - infra/cloudbuild/helpers/bazel_build.sh /affected-targets/build.txt
     volumes:
       - name: affected-targets
         path: /affected-targets
@@ -61,7 +61,7 @@ steps:
     entrypoint: bash
     args:
       - -c
-      - cat /affected-targets/test.txt | xargs bazel test
+      - infra/cloudbuild/helpers/bazel_test.sh /affected-targets/test.txt
     volumes:
       - name: affected-targets
         path: /affected-targets
