--- a/bazel/linux/run_um_kunit_tests.template
+++ b/bazel/linux/run_um_kunit_tests.template
@@ -2,7 +2,10 @@
 
 set -e
 
-MODULE=$(dirname $(realpath {module}))
 TMPOUTPUT=$TEST_TMPDIR/.output
-{kernel} ubd0={rootfs} hostfs=$MODULE uml_dir=$TEST_TMPDIR | tee $TMPOUTPUT
+HOSTFS="$(mktemp -d)"
+cp $(realpath {module}) $HOSTFS
+cp $(realpath {deps}) $HOSTFS
+
+{kernel} ubd0={rootfs} hostfs=${HOSTFS} uml_dir=$TEST_TMPDIR rw | tee $TMPOUTPUT
 {parser} parse < $TMPOUTPUT
