INFRA-115: Rename license_manager to flextape
This change renames our license manager server to flextape by:

* changing the top-level directory name
* changing the proto and service names

A README is added to explain what this is since it is no longer clear
from the file name.

Jira: INFRA-115

--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -3,18 +3,18 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "github.com/enfabrica/enkit/license_manager/server",
+    importpath = "github.com/enfabrica/enkit/flextape/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//flextape/proto:go_default_library",
+        "//flextape/service:go_default_library",
         "//lib/server:go_default_library",
-        "//license_manager/proto:go_default_library",
-        "//license_manager/service:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
 
 go_binary(
-    name = "license_manager",
+    name = "flextape",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
