--- a/flextape/service/BUILD.bazel
+++ b/flextape/service/BUILD.bazel
@@ -6,10 +6,10 @@ go_library(
         "license.go",
         "service.go",
     ],
-    importpath = "github.com/enfabrica/enkit/license_manager/service",
+    importpath = "github.com/enfabrica/enkit/flextape/service",
     visibility = ["//visibility:public"],
     deps = [
-        "//license_manager/proto:go_default_library",
+        "//flextape/proto:go_default_library",
         "@com_github_google_uuid//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
@@ -22,8 +22,8 @@ go_test(
     srcs = ["service_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//flextape/proto:go_default_library",
         "//lib/errdiff:go_default_library",
-        "//license_manager/proto:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_prashantv_gostub//:go_default_library",
