--- a/manager/client/BUILD.bazel
+++ b/manager/client/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/manager/client",
     visibility = ["//visibility:private"],
     deps = [
+        "//flextape/client:go_default_library",
         "//manager/rpc:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
