--- a/flextape/client/BUILD.bazel
+++ b/flextape/client/BUILD.bazel
@@ -1,9 +1,22 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = ["client.go"],
     importpath = "github.com/enfabrica/enkit/flextape/client",
     visibility = ["//manager/client:__pkg__"],
-    deps = ["@org_golang_google_grpc//:go_default_library"],
+    deps = ["//flextape/proto:go_default_library"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["client_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//flextape/proto:go_default_library",
+        "//lib/errdiff:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
+    ],
 )
