--- a/manager/client/BUILD.bazel
+++ b/manager/client/BUILD.bazel
@@ -7,7 +7,9 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//flextape/client:go_default_library",
+        "//flextape/proto:go_default_library",
         "//manager/rpc:go_default_library",
+        "@com_github_google_uuid//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
