INFRA-123: Write bazel command output to tempfiles
This change modifies how `bazel` commands are run inside enkit to dump
both stdout and stderr to temporary files. This simplifies command
running, which no longer requires goroutines and negotiating an io.Pipe,
and allows for the code to log stdout/stderr output on command failure.
This in turn will let us debug why bazel commands fail in the presubmit.

Tested:

affected-targets tested locally against this change:

```
enkit bazel affected-targets list --start=master --end=infra/123 --loglevel-console=debug

Affected targets:
//lib/bazel:go_default_test
//lib/bazel:go_default_library
//lib/bazel/commands:go_default_library
//enkit:go_default_library
//enkit:enkit-win-amd64
//enkit:enkit-linux-amd64
//enkit:enkit-darwin-amd64
//enkit:enkit
//enkit:deploy
//:gazelle-runner
//:gazelle
//:buildifier

Affected tests:
//lib/bazel:go_default_test
```

Jira: INFRA-123

--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -29,6 +29,7 @@ go_test(
     name = "go_default_test",
     srcs = [
         "affected_targets_test.go",
+        "exec_test.go",
         "options_test.go",
         "pattern_test.go",
         "query_test.go",
