--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
         "//lib/server:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
     ],
