--- a/flextape/service/BUILD.bazel
+++ b/flextape/service/BUILD.bazel
@@ -11,6 +11,8 @@ go_library(
     deps = [
         "//flextape/proto:go_default_library",
         "@com_github_google_uuid//:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
