--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
         "pool.go",
         "redirector.go",
         "server.go",
+        "socket.go",
+        "types.go",
     ],
     importpath = "github.com/enfabrica/enkit/proxy/enfuse",
     visibility = ["//visibility:public"],
@@ -32,6 +34,7 @@ go_test(
         "e2e_test.go",
         "pool_test.go",
         "redirector_test.go",
+        "socket_test.go",
     ],
     embed = [":go_default_library"],
     tags = [
