--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -6,16 +6,17 @@ go_library(
         "client.go",
         "config.go",
         "files.go",
-        "pool.go",
         "redirector.go",
         "server.go",
         "socket.go",
         "types.go",
+        "websocket.go",
     ],
     importpath = "github.com/enfabrica/enkit/proxy/enfuse",
     visibility = ["//visibility:public"],
     deps = [
         "//lib/kcerts:go_default_library",
+        "//lib/logger:go_default_library",
         "//lib/srand:go_default_library",
         "//proxy/enfuse/rpc:go_default_library",
         "@com_github_google_uuid//:go_default_library",
@@ -32,15 +33,16 @@ go_test(
     name = "go_default_test",
     srcs = [
         "e2e_test.go",
-        "pool_test.go",
         "redirector_test.go",
         "socket_test.go",
+        "websocket_test.go",
     ],
-    embed = [":go_default_library"],
+    race = "on",
     tags = [
         "no-sandbox",
     ],
     deps = [
+        ":go_default_library",
         "//lib/knetwork:go_default_library",
         "//lib/srand:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
