--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -7,11 +7,16 @@ go_library(
         "config.go",
         "files.go",
         "server.go",
+        "types.go",
+        "websocket.go",
     ],
     importpath = "github.com/enfabrica/enkit/proxy/enfuse",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/srand:go_default_library",
         "//proxy/enfuse/rpc:go_default_library",
+        "@com_github_google_uuid//:go_default_library",
+        "@com_github_gorilla_websocket//:go_default_library",
         "@org_bazil_fuse//:go_default_library",
         "@org_bazil_fuse//fs:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
@@ -20,7 +25,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["e2e_test.go"],
+    srcs = [
+        "e2e_test.go",
+        "websocket_test.go",
+    ],
     tags = [
         "no-sandbox",
     ],
@@ -29,6 +37,7 @@ go_test(
         "//lib/knetwork:go_default_library",
         "//lib/srand:go_default_library",
         "//proxy/enfuse/rpc:go_default_library",
+        "@com_github_gorilla_websocket//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_bazil_fuse//fs/fstestutil:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
