--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -29,6 +29,7 @@ go_test(
         "e2e_test.go",
         "websocket_test.go",
     ],
+    race = "on",
     tags = [
         "no-sandbox",
     ],
