--- a/flextape/proto/BUILD.bazel
+++ b/flextape/proto/BUILD.bazel
@@ -5,9 +5,16 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 proto_library(
     name = "flextape_proto",
     srcs = ["flextape.proto"],
-    visibility = ["//visibility:public"],
     deps = [
         "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+proto_library(
+    name = "config_proto",
+    srcs = ["config.proto"],
+    deps = [
+        ":flextape_proto",
     ],
 )
 
@@ -15,13 +22,17 @@ go_proto_library(
     name = "flextape_go_proto",
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
     importpath = "github.com/enfabrica/enkit/flextape/proto",
-    proto = ":flextape_proto",
-    visibility = ["//visibility:public"],
+    protos = [
+        ":config_proto",
+        ":flextape_proto",
+    ],
 )
 
 go_library(
     name = "go_default_library",
-    embed = [":flextape_go_proto"],
+    embed = [
+        ":flextape_go_proto",
+    ],
     importpath = "github.com/enfabrica/enkit/flextape/proto",
     visibility = ["//visibility:public"],
 )
