--- a/flextape/proto/BUILD.bazel
+++ b/flextape/proto/BUILD.bazel
@@ -2,6 +2,10 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
+# TODO: Make these definitions compatible with what gazelle wants to emit.
+
+# gazelle:ignore
+
 proto_library(
     name = "flextape_proto",
     srcs = ["flextape.proto"],
