--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//flextape/service:go_default_library",
         "//lib/server:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
     ],
 )
 
