flextape: Create server container

--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -1,10 +1,11 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//container:container.bzl", "container_push", "container_image")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/flextape/server",
-    visibility = ["//visibility:public"],
     deps = [
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
@@ -18,5 +19,40 @@ go_library(
 go_binary(
     name = "flextape",
     embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
+)
+
+pkg_tar(
+    name = "flextape_tar",
+    srcs = [":flextape"],
+    package_dir = "/enfabrica/bin",
+)
+
+pkg_tar(
+    name = "flextape_config_tar",
+    srcs = ["flextape_config.textproto"],
+    package_dir = "/enfabrica/config",
+)
+
+container_image(
+    name = "flextape_image",
+    base = "@golang_base//image",
+    tars = [
+        ":flextape_tar",
+        ":flextape_config_tar",
+    ],
+    cmd = [
+        "/enfabrica/bin/flextape",
+        "--service_config=/enfabrica/config/flextape_config.textproto",
+    ],
+)
+
+container_push(
+    name = "flextape_image_push",
+    format = "Docker",
+    image = ":flextape_image",
+    registry = "gcr.io",
+    repository = "devops-284019/infra/flextape",
+    # TODO: Change this tag to "live"
+    tag = "testing",
+    stamp = True,
 )
