--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@improbable-eng/grpc-web": "^0.15.0",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@testing-library/jest-dom": "5.12.0",
@@ -8,36 +7,23 @@
     "@testing-library/user-event": "12.8.3",
     "@types/jest": "26.0.23",
     "@types/node": "12.20.14",
-    "@types/react": "^17.0.34",
+    "@types/react": "17.0.9",
     "@types/react-dom": "17.0.6",
     "material-design-icons": "3.0.1",
     "material-design-lite": "1.3.0",
     "package-merge": "0.1.2",
     "react": "17.0.2",
-    "react-app-rewired": "^2.1.8",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "4.3.2",
-    "web-vitals": "1.1.2",
-    "@grpc/grpc-js": "1.3.7",
-    "google-protobuf": "3.18.0",
-    "grpc-tools": "1.11.2",
-    "grpc-web": "1.2.1",
-    "ts-protoc-gen": "0.15.0"
+    "web-vitals": "1.1.2"
   },
   "scripts": {
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@bazel/labs": "^4.4.5",
     "@bazel/runfiles": "3.5.1",
-    "@bazel/typescript": "^4.4.5",
-    "patch-package": "6.4.7",
-    "@grpc/grpc-js": "1.3.7",
-    "google-protobuf": "3.18.0",
-    "grpc-tools": "1.11.2",
-    "grpc-web": "1.2.1",
-    "ts-protoc-gen": "0.15.0"
+    "patch-package": "6.4.7"
   },
   "eslintConfig": {
     "extends": [
