--- a/ui/package.json
+++ b/ui/package.json
@@ -27,11 +27,10 @@
     "web-vitals": "1.1.2",
     "webpack-hot-client": "^4.2.0"
   },
-  "scripts": {
-    "postinstall": "patch-package"
-  },
+  "scripts": {},
   "devDependencies": {
     "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@bazel/labs": "^4.4.5",
     "@bazel/runfiles": "3.5.1",
     "@bazel/typescript": "^4.4.5",
@@ -45,10 +44,12 @@
     "grpc-tools": "1.11.2",
     "grpc-web": "1.2.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^25.5.4",
+    "jest": "^27.3.1",
+    "lolex": "^6.0.0",
     "patch-package": "6.4.7",
     "poi": "^12.10.3",
     "react-svg-loader": "^3.0.3",
+    "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
     "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
