bazel: Add cloud_run rules
This change adds rules to deploy a Docker image to Cloud Run, and
provides an example deployment for bestie.

Jira: INFRA-191

--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -1,11 +1,12 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//container:container.bzl", "container_push", "container_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/flextape/server",
+    visibility = ["//visibility:private"],
     deps = [
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
@@ -19,6 +20,7 @@ go_library(
 go_binary(
     name = "flextape",
     embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
 )
 
 pkg_tar(
@@ -36,13 +38,13 @@ pkg_tar(
 container_image(
     name = "flextape_image",
     base = "@golang_base//image",
-    tars = [
-        ":flextape_tar",
-        ":flextape_config_tar",
-    ],
     cmd = [
         "/enfabrica/bin/flextape",
         "--service_config=/enfabrica/config/flextape_config.textproto",
+    ],
+    tars = [
+        ":flextape_tar",
+        ":flextape_config_tar",
     ],
 )
 
@@ -52,7 +54,7 @@ container_push(
     image = ":flextape_image",
     registry = "gcr.io",
     repository = "devops-284019/infra/flextape",
+    stamp = True,
     # TODO: Change this tag to "live"
     tag = "testing",
-    stamp = True,
 )
