--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
+load("//bazel/cloud_run:defs.bzl", "cloud_run_deploy")
 
 go_library(
     name = "go_default_library",
@@ -12,8 +13,6 @@ go_library(
         "//lib/server:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
     ],
 )
 
@@ -48,4 +47,14 @@ container_push(
     repository = "devops-284019/infra/bestie",
     # TODO: Change this tag to "live"
     tag = "testing",
+)
+
+cloud_run_deploy(
+    name = "bestie_cloud_run_deploy",
+    access = "public",
+    image = "gcr.io/devops-284019/infra/bestie",
+    image_version = "testing",
+    project = "bestie-builds",
+    region = "us-west1",
+    service = "bestie",
 )
