--- a/lib/server/BUILD.bazel
+++ b/lib/server/BUILD.bazel
@@ -10,5 +10,7 @@ go_library(
         "@com_github_soheilhy_cmux//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//reflection:go_default_library",
+        "@org_golang_x_net//http2:go_default_library",
+        "@org_golang_x_net//http2/h2c:go_default_library",
     ],
 )
