--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -9,10 +9,13 @@ go_library(
     importpath = "github.com/enfabrica/enkit/bestie/server",
     visibility = ["//visibility:private"],
     deps = [
-        "//bestie/proto:go_default_library",
         "//lib/server:go_default_library",
+        "//third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
+        "@go_googleapis//google/devtools/build/v1:build_go_proto",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
+        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
     ],
 )
 
