flextape: Update to pull in LicensesStatus improvements
This change bumps the flextape image hash used, and changes the default
tag used when pushing images from "testing" to "latest".

Tested: Currently running on `build-00`

Jira: INFRA-287

--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -55,6 +55,5 @@ container_push(
     registry = "gcr.io",
     repository = "devops-284019/infra/flextape",
     stamp = True,
-    # TODO: Change this tag to "live"
-    tag = "testing",
+    tag = "latest",
 )
