flextape: Add server-side HTML UI
This change adds a `/queue` route to flextape that returns a page
showing:

* Each license + feature configured
* Current allocations for each, including command ID and owning user
* Current queued invocations for each, including command ID and owning
  user

The page uses Bootstrap from a CDN for formatting and hiding all but a
single selected license/feature combo's details.

Features with no reservations or queued invocations are sorted to the
bottom. The page remembers which panel is uncollapsed and the scroll
position on refresh.

Tested: Ran flextape locally, added load wrapping some `sleep` commands,
and observed `localhost:6433/queue`:

Jira: INFRA-288

--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -5,9 +5,11 @@ load("@rules_pkg//:pkg.bzl", "pkg_tar")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
+    embedsrcs = glob(["templates/*.tmpl"]),
     importpath = "github.com/enfabrica/enkit/flextape/server",
     visibility = ["//visibility:private"],
     deps = [
+        "//flextape/frontend:go_default_library",
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
         "//lib/server:go_default_library",
