--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -3,9 +3,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
+    embedsrcs = glob(["templates/*.tmpl"]),
     importpath = "github.com/enfabrica/enkit/flextape/server",
     visibility = ["//visibility:private"],
     deps = [
+        "//flextape/frontend:go_default_library",
         "//flextape/proto:go_default_library",
         "//flextape/service:go_default_library",
         "//lib/server:go_default_library",
