--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -22,6 +22,8 @@ go_library(
         "@com_github_miekg_dns//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
+        "@org_golang_google_grpc//status:go_default_library",
     ],
 )
 
