Using ioctl to get terminal width

--- a/gee/cmd/BUILD.bazel
+++ b/gee/cmd/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "commit.go",
         "config.go",
         "createSshKey.go",
+        "debug.go",
         "diff.go",
         "fix.go",
         "gcd.go",
@@ -45,5 +46,6 @@ go_library(
         "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_viper//:go_default_library",
         "@com_github_mitchellh_go_homedir//:go_default_library",
+        "//gee/lib:go_default_library",
     ],
 )
