--- a/gee/lib/BUILD.bazel
+++ b/gee/lib/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
         "runner.go",
         "logging.go",
     ],
-    importpath = "github.com/enfabrica/gee/lib",
+    importpath = "github.com/enfabrica/enkit/gee/lib",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_xo_terminfo//:go_default_library",
