--- a/gee/lib/BUILD.bazel
+++ b/gee/lib/BUILD.bazel
@@ -10,5 +10,6 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_xo_terminfo//:go_default_library",
+        "@com_github_alessio_shellescape//:go_default_library",
     ],
 )
