--- a/machinist/example/deployment/docker-compose.yml
+++ b/machinist/example/deployment/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "--dns-port=4455"
       - "--bind-net=0.0.0.0"
       - "--port=4456"
-      - "--domains=hello.loca"
+      - "--domains=changeme.local"
     ports:
       - "4455:4455"
       - "4456:4456"
