--- a/ui/package.json
+++ b/ui/package.json
@@ -1,29 +1,64 @@
 {
   "dependencies": {
+    "@babel/preset-env": "^7.16.0",
+    "@grpc/grpc-js": "1.3.7",
+    "@improbable-eng/grpc-web": "^0.15.0",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
-    "@types/jest": "26.0.23",
+    "@types/jest": "^27.0.2",
     "@types/node": "12.20.14",
-    "@types/react": "17.0.9",
+    "@types/react": "^17.0.34",
     "@types/react-dom": "17.0.6",
+    "google-protobuf": "3.18.0",
+    "grpc-tools": "1.11.2",
+    "grpc-web": "1.2.1",
     "material-design-icons": "3.0.1",
     "material-design-lite": "1.3.0",
     "package-merge": "0.1.2",
     "react": "17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "ts-protoc-gen": "^0.15.0",
     "typescript": "4.3.2",
-    "web-vitals": "1.1.2"
+    "web-vitals": "1.1.2",
+    "webpack-hot-client": "^4.2.0"
   },
-  "scripts": {
-    "postinstall": "patch-package"
-  },
+  "scripts": {},
   "devDependencies": {
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@bazel/labs": "^4.4.5",
     "@bazel/runfiles": "3.5.1",
-    "patch-package": "6.4.7"
+    "@bazel/typescript": "^4.4.5",
+    "@grpc/grpc-js": "1.3.7",
+    "@poi/plugin-typescript": "^12.3.1",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "google-protobuf": "3.18.0",
+    "grpc-tools": "1.11.2",
+    "grpc-web": "1.2.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
+    "lolex": "^6.0.0",
+    "patch-package": "6.4.7",
+    "poi": "^12.10.3",
+    "react-svg-loader": "^3.0.3",
+    "react-test-renderer": "^17.0.2",
+    "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
+    "svg-url-loader": "^7.1.1",
+    "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
     "extends": [
