--- a/gee/lib/BUILD.bazel
+++ b/gee/lib/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "git_utils.go",
         "logging.go",
         "runner.go",
     ],
