--- a/gee/lib/BUILD.bazel
+++ b/gee/lib/BUILD.bazel
@@ -15,5 +15,6 @@ go_library(
         "@com_github_alessio_shellescape//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@com_github_spf13_viper//:go_default_library",
+        "@com_github_mitchellh_go_homedir//:go_default_library",
     ],
 )
