--- a/gee/BUILD.bazel
+++ b/gee/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//gee/cmd:go_default_library",
+        "//gee/lib:go_default_library",
     ],
 )
 
