--- a/proxy/enfuse/BUILD.bazel
+++ b/proxy/enfuse/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/logger:go_default_library",
+        "//lib/multierror:go_default_library",
         "//lib/srand:go_default_library",
         "//proxy/enfuse/rpc:go_default_library",
         "@com_github_google_uuid//:go_default_library",
