bestie: Improve error handling and propagation
Changed the way the handler functions treat errors per Go best
practices. Removed newline formatting from error messages that
are propagated through fmt.Errorf(). Added comment for error
handled within function (not propagated).

Defined code owners of /bestie/ subtree for future reviewer
notifications in GitHub.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,5 @@
+/bestie/ @minor-fixes @msgoldflam
+
 # Changes to //third_party must be done exclusively via Copybara for imported
 # files. Reviewers should ensure this is the case.
 /third_party/ @minor-fixes
