Add Greg to CODEOWNERS for bestie

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-/bestie/ @minor-fixes @msgoldflam
+/bestie/ @minor-fixes @msgoldflam @gpaussaenf
 
 # Changes to //third_party must be done exclusively via Copybara for imported
 # files. Reviewers should ensure this is the case.
