--- a/lib/testutil/BUILD.bazel
+++ b/lib/testutil/BUILD.bazel
@@ -6,12 +6,14 @@ go_library(
     srcs = [
         "assert.go",
         "fs.go",
+        "helpers.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/testutil",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_psanford_memfs//:go_default_library",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
         "@org_golang_google_protobuf//testing/protocmp:go_default_library",
     ],
 )
