--- a/proxy/amux/BUILD.bazel
+++ b/proxy/amux/BUILD.bazel
@@ -10,8 +10,8 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = ["mux_test.go"],
-    embed = [":go_default_library"],
     deps = [
+        ":go_default_library",
         "//proxy/amux/amuxie:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
