--- a/enkit/outputs/BUILD.bazel
+++ b/enkit/outputs/BUILD.bazel
@@ -6,9 +6,11 @@ go_library(
     importpath = "github.com/enfabrica/enkit/enkit/outputs",
     visibility = ["//visibility:public"],
     deps = [
+        "//astore:go_default_library",
         "//lib/bes:go_default_library",
         "//lib/client:go_default_library",
         "//lib/kbuildbarn:go_default_library",
+        "//lib/kflags/kcobra:go_default_library",
         "//lib/multierror:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
