flextape: introduce prioritization support.
Background:
Before this PR, licenses were always allocated in FIFO order.

In this PR:
- allow to specify a prioritization strategy (per license).
- define an interface to provide different prioritization strategies,
  refactor the code to allow for the plumbing.
- create a strategy that spreads licenses evenly across users.
- added extensive tests.

Note that this PR still does not allow to allocate multiple licenses
at once. The rough plan to allow for that is to expand the concept
of "invocation", so it links to all the types it is trying to allocate,
and extend the prioritizer to account for that.

For now, I just wanted to allow better license spreading, and figure out a
reasonable interface for queue reordering.

Tested: added significant unit tests, all passing.

--- a/flextape/service/BUILD.bazel
+++ b/flextape/service/BUILD.bazel
@@ -4,6 +4,8 @@ go_library(
     name = "go_default_library",
     srcs = [
         "license.go",
+        "prioritizer.go",
+        "queue.go",
         "service.go",
     ],
     importpath = "github.com/enfabrica/enkit/flextape/service",
@@ -21,7 +23,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["service_test.go"],
+    srcs = [
+        "queue_test.go",
+        "service_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//flextape/proto:go_default_library",
