bestie: Support text.xml file for summary metrics
Added support for reading individual test case pass/fail/skip
summary results from the output test.xml file generated by
a 'bazel test' command. Supports both fully structured XML
output produced by the --junitxml flag (pytest) and unstructured
XML, where test case results are scraped from the <system-out>
console output text.

Refactored the test_result.go file to process both the text.xml
and outputs.zip files, the latter still used for test result
data metrics contained in *.metrics.pb files within.

Tested: Ran local instance of BES Endpoint using sample metrics
and //systest/src/benchmark and //systest/src/regression tests.
Forced some test cases to fail and to be skipped to verify handling
of these values in the test.xml file.

Jira: INFRA-594

--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -8,7 +8,8 @@ go_library(
         "bigquery_metrics.go",
         "main.go",
         "service.go",
-        "testresult.go",
+        "test_result.go",
+        "xml_result.go",
     ],
     importpath = "github.com/enfabrica/enkit/bestie/server",
     visibility = ["//visibility:private"],
