astore: Add unit tests for server.Retrieve
This change aims to add unit tests for Server.Retrieve, so that behavior
can be safely modified in a future change. It does this by replacing the
`ds` field of `Server` with an interface that has the required subset of
methods from `datastore.Client`, and then providing a fake in the tests
that will record the queries made for later comparison and assertion.

Jira: INFRA-830

--- a/scripts/BUILD.bazel
+++ b/scripts/BUILD.bazel
@@ -36,9 +36,9 @@ astore_upload(
 
 genrule(
     name = "gee.md-gen",
-    outs = ["actual-gee.md"],
     srcs = ["gee"],
-    cmd_bash = "TERM=none /bin/bash $(location gee) help markdown >$@"
+    outs = ["actual-gee.md"],
+    cmd_bash = "TERM=none /bin/bash $(location gee) help markdown >$@",
 )
 
 diff_test(
