--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -31,12 +31,24 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["astore_test.go"],
+    srcs = [
+        "astore_test.go",
+        "retrieve_test.go",
+        "util_test.go",
+    ],
     data = glob(["testdata/**"]),
+    embed = [":go_default_library"],
     local = True,
     deps = [
-        ":go_default_library",
         "//astore/client/astore:go_default_library",
+        "//astore/rpc:astore-go",
+        "//lib/errdiff:go_default_library",
+        "//lib/testutil:go_default_library",
+        "@com_github_prashantv_gostub//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@com_google_cloud_go_datastore//:go_default_library",
+        "@com_google_cloud_go_storage//:go_default_library",
+        "@go_googleapis//google/datastore/v1:datastore_go_proto",
+        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
     ],
 )
