bazel/{appengine,website}: rules to create and push static appengine websites.
This PR is larger than I was initially expecting. If required,
I could break this down in multiple PRs.

See a separate PR I'll send shortly including a simple example
of use. In short, this defines several rules that allow to:

1) Manipulate appengine config files. See the appengine/config.bzl
   file, and the appengine/configtools/ directory.

2) Push and run appengine python applications. See
   appengine/pywebsite.py.

3) Create a clean hierarchy of files and directories from a set
   of rules and relatively friendly set of parameters.

4) A couple utility macros, inspired by another PR you are probably
   well familiar with at this point. See utils/macro.bzl and
   utils/messaging.bzl

Tested: there's a couple minor tests here and there, but this has
mostly been tested manually, by running local websites as well
as by pushing them to appengine.

--- a/bazel/appengine/BUILD.bazel
+++ b/bazel/appengine/BUILD.bazel
@@ -1,1 +1,26 @@
 exports_files(["gcloud.sh"])
+
+load("//bazel/appengine:config.bzl", "DEFAULT_BASE", "DEFAULT_HANDLERS", "appengine_config")
+
+# This rule provides an appengine configuration file with
+# global default parameters - all that you would expect before
+# the "handlers" statement in a python app.
+#
+# In an appengine_merge rule, this rule provides what should
+# normally be prepended to the file.
+appengine_config(
+    name = "config-base",
+    config = DEFAULT_BASE,
+    visibility = ["//visibility:public"],
+)
+
+# This rule provides an appengine configuration file that
+# defines an "handler" statement  to serve the entire generated tree.
+#
+# In an appengine_merge rule, this rule provides what should
+# normally be appended to the file.
+appengine_config(
+    name = "config-handlers",
+    config = DEFAULT_HANDLERS,
+    visibility = ["//visibility:public"],
+)
