bazel/utils/remote.bzl: adds test, fix existing features.
In this PR:
- add unit tests to the remote rule. This is a lot of lines,
  but actually very little logic.
- fix several problems:
  - pass kwargs from the macro
  - add an help screen
  - rename _bin parameters to _cmd, to indicate those can really be
    bash commands, not just paths to binaries.
  - have wrappers correctly override parameters.

--- a/tools/codegen/tests/BUILD.bazel
+++ b/tools/codegen/tests/BUILD.bazel
@@ -9,6 +9,11 @@ codegen_test(
         "over=rides",
         "zoo=zebra",
     ],
+    visibility = [
+        # Used by another unit test to show that codegen stuff
+        # is handled correctly.
+        "//bazel/utils/testdata/remote:__pkg__",
+    ],
 )
 
 codegen_test(
